Minor fixes to word-wrap, less precision, making table 100% width

--- a/static/styles/components/project-card.scss
+++ b/static/styles/components/project-card.scss
@@ -4,63 +4,65 @@
 .project-list {
     margin: 0;
     padding: 0;
-    .card {
-        margin: 1em 1em 1em 0;
-        background: #fff;
-        display: inline-block;
-        vertical-align: top;
-        width: 20em;
-        border-radius: 0.5em;
-        box-shadow: 0 1px 1px 1px rgba(0,0,0,0.1);
+}
 
-        a {
-            text-decoration: none;
-            color: #333;
+.card {
+    margin: 1em 1em 1em 0;
+    background: #fff;
+    display: inline-block;
+    vertical-align: top;
+    width: 20em;
+    border-radius: 0.5em;
+    box-shadow: 0 1px 1px 1px rgba(0,0,0,0.1);
+
+    a {
+        text-decoration: none;
+        color: #333;
+    }
+
+    > div { padding: 0em 0.5em; }
+
+    .not-verified {
+        background: #39f;
+        color: #fff;
+        padding-top: 0.5em;
+        padding-bottom: 0.5em;
+        border-radius: 0.5em 0.5em 0 0;
+        font-size: 0.9em;
+    }
+
+    .card-left {
+        float: left;
+        max-width: 15em;
+        word-wrap: break-word;
+
+        h2, h3 { font-weight: 300; }
+        h2 {
+            font-size: 1.1em;
+            margin: 0.5em 0;
         }
-
-        > div { padding: 0em 0.5em; }
-
-        .not-verified {
-            background: #39f;
-            color: #fff;
-            padding-top: 0.5em;
-            padding-bottom: 0.5em;
-            border-radius: 0.5em 0.5em 0 0;
-            font-size: 0.9em;
+        h3 {
+            font-size: 1em;
+            margin: 0.3em 0;
         }
+    }
 
-        .card-left {
-            float: left;
-            max-width: 15em;
-            overflow-wrap: break-word;
-            h2, h3 { font-weight: 300; }
-            h2 {
-                font-size: 1.1em;
-                margin: 0.5em 0;
-            }
-            h3 {
-                font-size: 1em;
-                margin: 0.3em 0;
-            }
-        }
+    .card-right {
+        float: right;
+    }
 
-        .card-right {
-            float: right;
-        }
-
-        .tags {
-            border-top: 1px solid #ccc;
-            color: #000;
-            border-radius: 0 0 0.5em 0.5em;
-            font-size: 0.8em;
-            ul {
-                padding: 0.5em;
-                margin: 0;
-                list-style-type: none;
-                li {
-                    float: left;
-                    margin-right: 1em;
-                }
+    .tags {
+        border-top: 1px solid #ccc;
+        color: #000;
+        border-radius: 0 0 0.5em 0.5em;
+        font-size: 0.8em;
+        ul {
+            padding: 0.5em;
+            margin: 0;
+            list-style-type: none;
+            li {
+                float: left;
+                margin-right: 1em;
             }
         }
     }
